fix: two columns overflow

--- a/carga-documentos.css
+++ b/carga-documentos.css
@@ -31,7 +31,7 @@ header {
 .two-columns {
   display: grid;
   gap: 2rem 1rem;
-  grid-template-columns: repeat(auto-fit, minmax(min(100%, 350px), 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 }
 
 input[type="file"] {
