--- a/crear-usuario-formulario.css
+++ b/crear-usuario-formulario.css
@@ -58,7 +58,7 @@ header {
 .two-columns {
   display: grid;
   gap: 1rem;
-  grid-template-columns: repeat(auto-fit, minmax(min(100%, 327px), 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(327px, 1fr));
 }
 
 label {
